# terp-core

./: .codecov.yml  .dockerignore  .gitignore  .gitpod.yml  .golangci.yml  .goreleaser.yaml  .mergify.yml  CHANGELOG  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INTEGRATION.MD  INTEGRATION.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  UPGRADING.md  chains.yaml  config.yml  docker-compose.yml  draft_proposal.json  flake.nix  go.mod  go.sum  setup_and_run.sh  startnode.sh
.circleci/: config.yml
.github/: CODEOWNERS  dependabot.yml
app/: ante.go  app.go  app_test.go  encoding.go  export.go  genesis.go  modules.go  posthandler.go  querier.go  sim_test.go  test_access.go  test_helpers.go  test_support.go  upgrades.go  wasm.go  wasm_config.go
benchmarks/: app_test.go  bench_test.go
docker/: README.md  run_terpd.sh  run_wasmd.sh  setup_and_run.sh  setup_terpd.sh  setup_wasmd.sh
docs/: CODING_GUIDELINES.md  CONTRIBUTING.md  EVENTS.md  INTEGRATION.md  README.md  SECURITY.md  UPGRADING.md  api_migration.md  docs.go  swagger.yml
interchaintest/: chain_start_test.go  chain_upgrade_test.go  ci_integration.go  go.mod  go.sum  ibc_transfer_test.go  module_burn_test.go  module_clock_test.go  module_drip_test.go  module_feeshare_test.go  module_ibchooks_test.go  module_pfm_test.go  module_tokenfactory_test.go  setup.go  utils.go  (+1 more)
tests/tsh/hashmerchant/contracts/hashmerchant-test/: Cargo.toml
tests/tsh/hashmerchant/contracts/hashmerchant-test/src/: lib.rs  msg.rs
tests/tsh/zk-wasmvm/: Cargo.toml  a.rick.sh
tests/tsh/zk-wasmvm/src/: main.rs
(+771 files in other folders)
