[package]
name = "zk-wasmvm"
authors = ["AHardnett <ahardnett@protonmail.com>"]
documentation = "https://docs.terp.network"
edition = "2021"
homepage = "https://terp.network"
keywords = ["cosmos", "zcash"]
license = "GPL-3.0-or-later"
repository = "https://github.com/terpnetwork/zk-wasmvm"
version = "0.0.1"

[dependencies]
zk-cosmwasm = { path = "../../../../../zk-cosmwasm/mvp/packages/zk", features = ["interface"] }
serde_json = "1.0"
base64 = "0.22.1"

# Backup release profile, will result in warnings during optimization
[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
opt-level        = 3
overflow-checks  = true
panic            = 'abort'
rpath            = false
