[package]
name = "hashmerchant-test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = { version = "2.2", features = ["staking"] }
cosmwasm-schema = "2.2"
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
thiserror = "1"

[profile.release]
opt-level = "z"
strip = true
codegen-units = 1
lto = true
